--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,50 @@
+$days: 28, 29, 30, 31;
+$week-days: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
+
 body {
   margin: 0;
+}
+
+.calendar {
+  margin: auto;
+  max-width: 708px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #3b3b3b;
+}
+
+@each $day in $days {
+  @for $i from 1 through $day {
+    .calendar-#{$day} div:nth-child(#{$i}) {
+      width: 100px;
+      height: 100px;
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #eee;
+      border: 1px black solid;
+      margin-bottom: 1px;
+      margin-left: 1px;
+    }
+
+    .calendar-#{$day} div:nth-child(#{$i})::after {
+      content: "#{$i}";
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+    }
+  }
+}
+
+@each $week-day, $number in $week-days {
+  .calendar-#{$week-day} div:first-child {
+    margin-left: #{$number * 100px + 1 + $number};
+  }
+}
+
+.calendar div:hover {
+  cursor: pointer;
+  background-color: pink;
+  transform: translateY(-20px);
+  transition-duration: 0.6s;
 }
